tests/fixtures/valid/multi/diamond_assert/src/graph/main.gcl
// main.gcl -- diamond include: both left and right include shared
include graph.left().{ doubled };
include graph.right().{ tripled };

node total: Dimensionless = @doubled + @tripled;
