tests/fixtures/invalid/multi/auto_assert_module/src/lib/main.gcl
// main.gcl -- module include; assertion in lib.gcl auto-evaluated
import lib.lib as lib;

node result: Dimensionless = @lib.doubled + 1.0;
